--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Cardo:400i|Open+Sans:700|Raleway:300,400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
-    <link rel="manifest" href="img/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/img/favicons/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
-                <img src="img/ActiveBox.png" alt="">
+                <img src="assets/img/ActiveBox.png" alt="">
             </div>
 
             <nav class="nav" id="nav">
@@ -106,42 +106,42 @@
 <div class="container" id="features">
     <div class="features">
         <div class="features__item">
-            <img class="features__icon" src="img/features/feature-1.png" alt="">
+            <img class="features__icon" src="assets/img/features/feature-1.png" alt="">
             <h4 class="features__title">Easily Customised</h4>
             <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus
                 eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</div>
         </div>
 
         <div class="features__item">
-            <img class="features__icon" src="img/features/feature-2.png" alt="">
+            <img class="features__icon" src="assets/img/features/feature-2.png" alt="">
             <h4 class="features__title">Responsive REady</h4>
             <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus
                 eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</div>
         </div>
 
         <div class="features__item">
-            <img class="features__icon" src="img/features/feature-3.png" alt="">
+            <img class="features__icon" src="assets/img/features/feature-3.png" alt="">
             <h4 class="features__title">Modern Design</h4>
             <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus
                 eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</div>
         </div>
 
         <div class="features__item">
-            <img class="features__icon" src="img/features/feature-4.png" alt="">
+            <img class="features__icon" src="assets/img/features/feature-4.png" alt="">
             <h4 class="features__title">Clean Code</h4>
             <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus
                 eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</div>
         </div>
 
         <div class="features__item">
-            <img class="features__icon" src="img/features/feature-5.png" alt="">
+            <img class="features__icon" src="assets/img/features/feature-5.png" alt="">
             <h4 class="features__title">Ready to Ship</h4>
             <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus
                 eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</div>
         </div>
 
         <div class="features__item">
-            <img class="features__icon" src="img/features/feature-6.png" alt="">
+            <img class="features__icon" src="assets/img/features/feature-6.png" alt="">
             <h4 class="features__title">Download for Free</h4>
             <div class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus
                 eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</div>
@@ -154,7 +154,7 @@
 <!-- Works -->
 <div class="works" id="works">
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-1.jpg" alt="">
+        <img class="works__photo" src="assets/img/works/work-1.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project Name</div>
             <div class="works__text">User Interface Design</div>
@@ -162,7 +162,7 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-2.jpg" alt="">
+        <img class="works__photo" src="assets/img/works/work-2.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project Name</div>
             <div class="works__text">User Interface Design</div>
@@ -170,7 +170,7 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-3.jpg" alt="">
+        <img class="works__photo" src="assets/img/works/work-3.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project Name</div>
             <div class="works__text">User Interface Design</div>
@@ -178,7 +178,7 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-4.jpg" alt="">
+        <img class="works__photo" src="assets/img/works/work-4.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project Name</div>
             <div class="works__text">User Interface Design</div>
@@ -186,7 +186,7 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-5.jpg" alt="">
+        <img class="works__photo" src="assets/img/works/work-5.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project Name</div>
             <div class="works__text">User Interface Design</div>
@@ -194,7 +194,7 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-6.jpg" alt="">
+        <img class="works__photo" src="assets/img/works/work-6.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project Name</div>
             <div class="works__text">User Interface Design</div>
@@ -202,7 +202,7 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-7.jpg" alt="">
+        <img class="works__photo" src="assets/img/works/work-7.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project Name</div>
             <div class="works__text">User Interface Design</div>
@@ -210,7 +210,7 @@
     </div>
 
     <div class="works__item">
-        <img class="works__photo" src="img/works/work-8.jpg" alt="">
+        <img class="works__photo" src="assets/img/works/work-8.jpg" alt="">
         <div class="works__content">
             <div class="works__title">Project Name</div>
             <div class="works__text">User Interface Design</div>
@@ -224,7 +224,7 @@
         <div class="team__inner">
 
             <div class="team__item">
-                <img class="team__photo" src="img/team/team-1.jpg">
+                <img class="team__photo" src="assets/img/team/team-1.jpg">
                 <div class="team__name">Ruth Woods</div>
                 <div class="team__prof">Founder, CEO</div>
                 <div class="team__text">
@@ -251,7 +251,7 @@
                 </div>
             </div>
             <div class="team__item">
-                <img class="team__photo" src="img/team/team-2.jpg">
+                <img class="team__photo" src="assets/img/team/team-2.jpg">
                 <div class="team__name">Timothy Reed</div>
                 <div class="team__prof">Co-Founder, Developer</div>
                 <div class="team__text">
@@ -278,7 +278,7 @@
                 </div>
             </div>
             <div class="team__item">
-                <img class="team__photo" src="img/team/team-3.jpg">
+                <img class="team__photo" src="assets/img/team/team-3.jpg">
                 <div class="team__name">Victoria Valdez</div>
                 <div class="team__prof">UI Designer</div>
                 <div class="team__text">
@@ -305,7 +305,7 @@
                 </div>
             </div>
             <div class="team__item">
-                <img class="team__photo" src="img/team/team-4.jpg">
+                <img class="team__photo" src="assets/img/team/team-4.jpg">
                 <div class="team__name">Beverly Little</div>
                 <div class="team__prof">Data Scientist</div>
                 <div class="team__text">
@@ -347,7 +347,7 @@
             <div class="slick-item">
                 <div class="reviews__item">
                     <div class="reviews__photo">
-                        <img class="reviews__img" src="img/reviews/review-1.jpg">
+                        <img class="reviews__img" src="assets/img/reviews/review-1.jpg">
                     </div>
                     <div class="reviews__content">
                         <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec
@@ -359,7 +359,7 @@
             <div class="slick-item">
                 <div class="reviews__item">
                     <div class="reviews__photo">
-                        <img class="reviews__img" src="img/reviews/review-1.jpg">
+                        <img class="reviews__img" src="assets/img/reviews/review-1.jpg">
                     </div>
                     <div class="reviews__content">
                         <div class="reviews__text">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
@@ -443,7 +443,7 @@
 
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script src="app.js"></script>
+<script src="assets//js/app.js"></script>
 
 
 </body>
